--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                         <a href="#about" class="nav-item nav-link">About</a>
                         <a href="#service" class="nav-item nav-link">Services</a>
                         <a href="#project" class="nav-item nav-link">Project</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
             </nav>
