--- a/single.html
+++ b/single.html
@@ -22,7 +22,7 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="scss/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -38,17 +38,10 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link">Pricing</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item active">Blog Detail</a>
-                            </div>
-                        </div>
+                        <a href="index.html#home" class="nav-item nav-link">Home</a>
+                        <a href="index.html#about" class="nav-item nav-link">About</a>
+                        <a href="index.html#services" class="nav-item nav-link">Services</a>
+                        <a href="blog.html" class="nav-item nav-link">Projects</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                 </div>
@@ -74,7 +67,7 @@
     <div class="container py-5">
         <div class="row">
             <!-- Blog Detail Start -->
-            <div class="col-lg-8">
+            <div class="col-lg-12">
                 <div class="position-relative">
                     <img class="img-fluid w-100" src="img/blog-1.jpg" alt="">
                     <div class="position-absolute bg-primary d-flex flex-column align-items-center justify-content-center"
@@ -86,10 +79,6 @@
                 <div class="pt-4 pb-2">
                     <div class="d-flex mb-3">
                         <div class="d-flex align-items-center">
-                            <img class="rounded-circle" style="width: 40px; height: 40px;" src="img/user.jpg" alt="">
-                            <a class="text-muted ml-2" href="">John Doe</a>
-                        </div>
-                        <div class="d-flex align-items-center ml-4">
                             <i class="far fa-bookmark text-primary"></i>
                             <a class="text-muted ml-2" href="">Web Design</a>
                         </div>
@@ -169,120 +158,6 @@
             <!-- Blog Detail End -->
 
             <!-- Sidebar Start -->
-            <div class="col-lg-4 mt-5 mt-lg-0">
-                <!-- Search Form Start -->
-                <div class="mb-5">
-                    <form action="">
-                        <div class="input-group">
-                            <input type="text" class="form-control form-control-lg" placeholder="Keyword">
-                            <div class="input-group-append">
-                                <span class="input-group-text bg-transparent text-primary"><i
-                                        class="fa fa-search"></i></span>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <!-- Search Form End -->
-
-                <!-- Category Start -->
-                <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Categories</h3>
-                    <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Web Design</a>
-                            <span class="badge badge-primary badge-pill">150</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Web Development</a>
-                            <span class="badge badge-primary badge-pill">131</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Online Marketing</a>
-                            <span class="badge badge-primary badge-pill">78</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Keyword Research</a>
-                            <span class="badge badge-primary badge-pill">56</span>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <a class="font-weight-semi-bold text-decoration-none" href="#"><i class="fa fa-angle-right mr-2"></i>Email Marketing</a>
-                            <span class="badge badge-primary badge-pill">98</span>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Category End -->
-
-                <!-- Recent Post Start -->
-                <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Recent Post</h3>
-                    <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
-                            <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
-                            <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
-                            <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-2.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
-                            <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                    <div class="d-flex mb-3">
-                        <img class="img-fluid" src="img/blog-1.jpg" style="width: 80px; height: 80px;" alt="">
-                        <div class="d-flex align-items-center border border-left-0 px-3" style="height: 80px;">
-                            <a class="text-secondary font-weight-semi-bold" href="">Lorem ipsum dolor sit amet consec adipis elit</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Recent Post End -->
-
-                <!-- Image Start -->
-                <div class="border p-3 mb-5">
-                    <img src="img/blog-1.jpg" alt="" class="img-fluid">
-                </div>
-                <!-- Image End -->
-
-                <!-- Tags Start -->
-                <div class="mb-5">
-                    <h3 class="font-weight-bold mb-4">Tag Cloud</h3>
-                    <div class="d-flex flex-wrap m-n1">
-                        <a href="" class="btn btn-outline-primary m-1">Design</a>
-                        <a href="" class="btn btn-outline-primary m-1">Development</a>
-                        <a href="" class="btn btn-outline-primary m-1">Marketing</a>
-                        <a href="" class="btn btn-outline-primary m-1">SEO</a>
-                        <a href="" class="btn btn-outline-primary m-1">Writing</a>
-                        <a href="" class="btn btn-outline-primary m-1">Consulting</a>
-                    </div>
-                </div>
-                <!-- Tags End -->
-
-                <!-- Image Start -->
-                <div class="border p-3 mb-5">
-                    <img src="img/blog-2.jpg" alt="" class="img-fluid">
-                </div>
-                <!-- Image End -->
-
-                <!-- Plain Text Start -->
-                <div>
-                    <h3 class="font-weight-bold mb-4">Plain Text</h3>
-                    <div class="border p-3">
-                        Aliquyam sed lorem stet diam dolor sed ut sit. Ut sanctus erat ea est aliquyam dolor et. Et no consetetur eos labore ea erat voluptua et. Et aliquyam dolore sed erat. Magna sanctus sed eos tempor rebum dolor, tempor clita sit et elitr eirmod.
-                    </div>
-                </div>
-                <!-- Plain Text End -->
-            </div>
             <!-- Sidebar End -->
         </div>
     </div>
