--- a/index.html
+++ b/index.html
@@ -42,7 +42,15 @@
                         <a href="#home" class="nav-item nav-link active">Home</a>
                         <a href="#about" class="nav-item nav-link">About</a>
                         <a href="#service" class="nav-item nav-link">Services</a>
-                        <a href="#project" class="nav-item nav-link">Project</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                              News & articles
+                            </a>
+                            <div class="dropdown-menu rounded" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="#">News</a>
+                              <a class="dropdown-item" href="#">Articles</a>
+                            </div>
+                          </li>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
