--- a/teams.html
+++ b/teams.html
@@ -39,9 +39,9 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link ">Home</a>
-                        <a href="#" class="nav-item nav-link active">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
+                        <a href="#home" class="nav-item nav-link active">Home</a>
+                        <a href="#about" class="nav-item nav-link">About</a>
+                        <a href="#service" class="nav-item nav-link">Services</a>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                               News & articles
@@ -59,6 +59,7 @@
     </div>
     <!-- Navbar End -->
 
+
     <!-- Page Header Start -->
     <div class="container-fluid page-header d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5 mb-5">
         <h1 class="display-4 text-white mb-3 mt-0 mt-lg-5">Blog</h1>
@@ -73,75 +74,74 @@
 
     <!-- Blog Start -->
     <div class="container py-5">
-        <section data-aos="fade-right"
-    data-aos-duration="1000"
-    data-aos-easing="ease-in-sine" id="about">
-        <div class="container-fluid py-5">
-            <div class="container">
-                <div class="row align-items-center pb-1">
-                    <div data-aos="fade-left" data-aos-duration="1000" class="col-lg-7 mt-5 mt-lg-0">
-                        <h1 class="mt-2 mb-3">About Our Firm</h1>
-                        <h4>R .PRAMA WIJAWA & PARTNERS</h4>
-                        <p class="mb-4">
-                            Our firm is focused on the results. With
-                            exceptional experiences and depth of
-                            knowledge, we delivers a practical and
-                            ebjective solutions to solving your legal
-                            problems. Our mindset is understanding what
-                            your needs and deliver a top notch legal
-                            services.
-                            <br>
-                            The firm is committed to provide excellent
-                            service to develop a long-term relationship
-                            with clients. We believe that our dedication in
-                            understanding client’s objectives are finding
-                            the right approace to achieve those objectives
-                            will be a strength point in developing a
-                            long-term mutual relationship between the
-                            firm and its clients.
-                        </p>
-                        <!-- <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold">Read More</a> -->
-                    </div>
-                    <div data-aos="fade-right" data-aos-duration="1000" class="col-lg-5 border-0">
-                        <img class="img-thumbnail border-0 h-100" src="img/about.png" alt="">
-                    </div>
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-lg-4">
+                <img src="img/founder.png" class="w-100 rounded shadow" alt="">
+                
+            </div>
+            <div class="col-lg-8 d-flex flex-column justify-content-around">
+                <div class="people-name d-flex flex-column text-center justify-content-center align-items-center">
+                    <h4>FOUNDER</h4>
+                    <h4>Ramon Prama Wijaya, S.H., M.H.</h4>
                 </div>
-                <div data-aos="fade-right" class="row mt-4">
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <div class="card-header bg-transparent border-0 ">
-                                <h5 class="font-weight-bold">Email</h5>
-                            </div>
-                            <div class="card-body d-flex align-items-center">
-                                <i class="fa fa-2x fa-envelope-open text-primary mr-3"></i>
-                                <div class="d-flex flex-column">
-                                    <p class="m-0">proxy@rpwadvocates.com</p>
+                <p>
+                    He started his career as a legal practitioner in 2001 at Sijabat and 
+                    Partners Law Firm as a Junior Associate. Afterwards he joined to 
+                    Pamungkas, Noerdin, Wahyudi Law Firm as a Senior Associate. His last 
+                    position was a Partner at Wirsamulia & Ramon Law Firm.
+                    He has an extensive experience in Indonesia including civil court, 
+                    constitutional court, Indonesian Arbitration Board (BANI), commercial 
+                    court, administrative court, Islamic religion court, labour court (PHI), 
+                    also holds the advocate license issued by Indonesian Advocates 
+                    Association (PERADI).
+                </p>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 mb-5">
+                        <div class="owl-carousel team-carousel" data-aos="fade-right" data-aos-duration="2000">
+                            <div class="team-item">
+                                <div class="position-relative">
+                                    <img class="img-fluid w-100" src="img/ass-1.png" alt="">
+                                    <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                        <div class="d-flex align-items-center justify-content-start">
+                                            <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fas fa-eye" data-toggle="tooltip" data-placement="top" title="Detail"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="border border-top-0 text-center" style="padding: 30px;">
+                                    <h5 class="font-weight-bold">Niko Andro Syafril, SH</h5>
+                                    <span>ASSOCIATE</span>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <div class="card-header bg-transparent border-0 ">
-                                <h5 class="font-weight-bold">Phone</h5>
-                            </div>
-                            <div class="card-body d-flex align-items-center">
-                                <i class="fa fa-2x fa-phone-alt text-primary mr-3"></i>
-                                <div class="d-flex flex-column">
-                                    <p class="m-0">(021) - 29557422</p>
+                            <div class="team-item">
+                                <div class="position-relative">
+                                    <img class="img-fluid w-100" src="img/ass-2.png" alt="">
+                                    <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                        <div class="d-flex align-items-center justify-content-start">
+                                            <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fas fa-eye" data-toggle="tooltip" data-placement="top" title="Detail"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="border border-top-0 text-center" style="padding: 30px;">
+                                    <h5 class="font-weight-bold">Lamhot Pandapotan, SH</h5>
+                                    <span>ASSOCIATE</span>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card border-0">
-                            <div class="card-header bg-transparent border-0 ">
-                                <h5 class="font-weight-bold">Office</h5>
-                            </div>
-                            <div class="card-body d-flex align-items-center">
-                                <i class="fas fa-2x fa-building text-primary mr-3"></i>
-                                <div class="d-flex flex-column">
-                                    <p class="m-0">Jakarta, Indonesia   </p>
+                            <div class="team-item">
+                                <div class="position-relative">
+                                    <img class="img-fluid w-100" src="img/ass-3.png" alt="">
+                                    <div class="team-overlay position-absolute d-flex align-items-center justify-content-center m-3">
+                                        <div class="d-flex align-items-center justify-content-start">
+                                            <a class="btn btn-outline-secondary rounded-circle text-center mr-2 px-0" style="width: 38px; height: 38px;" href="#"><i class="fas fa-eye" data-toggle="tooltip" data-placement="top" title="Detail"></i></a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="border border-top-0 text-center" style="padding: 30px;">
+                                    <h5 class="font-weight-bold">Debbi Puspito, SH</h5>
+                                    <span>ASSOCIATE</span>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,6 @@
                 </div>
             </div>
         </div>
-    </section>
     </div>
     <!-- Blog End -->
 
