--- a/blog.html
+++ b/blog.html
@@ -28,9 +28,10 @@
 
 <body>
     <!-- Navbar Start -->
+    <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0">
         <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark ">
                 <a href="index.html" class="navbar-brand">
                     <img src="img/logo.png" width="100px" alt="">
                 </a>
@@ -39,24 +40,26 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link ">Home</a>
-                        <a href="#" class="nav-item nav-link active">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                              News & articles
+                        <a href="teams.html" class="nav-item nav-link">Our Attorney</a>
+                        <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                        <a href="blog.html" class="nav-item nav-link active">Articles</a>
+                        <!-- <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                News & articles
                             </a>
                             <div class="dropdown-menu rounded" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">News</a>
-                              <a class="dropdown-item" href="#">Articles</a>
+                                <a class="dropdown-item" href="#">News</a>
+                                <a class="dropdown-item" href="#">Articles</a>
                             </div>
-                          </li>
+                        </li> -->
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
+    <!-- Navbar End -->
     <!-- Navbar End -->
 
 
@@ -173,7 +176,7 @@
                                     <a class="text-muted ml-2" href="">Web Design</a>
                                 </div>
                             </div>
-                            <a class="h4 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                            <a class="h4 font-weight-bold" href="single.html">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-3">
@@ -196,7 +199,7 @@
                                     <a class="text-muted ml-2" href="">Web Design</a>
                                 </div>
                             </div>
-                            <a class="h4 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                            <a class="h4 font-weight-bold" href="single.html">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-3">
@@ -219,7 +222,7 @@
                                     <a class="text-muted ml-2" href="">Web Design</a>
                                 </div>
                             </div>
-                            <a class="h4 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                            <a class="h4 font-weight-bold" href="single.html">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
                         </div>
                     </div>
                     <div class="col-md-6 mb-3">
@@ -242,7 +245,7 @@
                                     <a class="text-muted ml-2" href="">Web Design</a>
                                 </div>
                             </div>
-                            <a class="h4 font-weight-bold" href="">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
+                            <a class="h4 font-weight-bold" href="single.html">Kasd tempor diam sea justo dolor kasd amet dolor labore amet clita est diam dolor</a>
                         </div>
                     </div>
                 </div>
