--- a/teams.html
+++ b/teams.html
@@ -28,35 +28,38 @@
 
 <body>
     <!-- Navbar Start -->
-    <div class="container-fluid nav-bar p-0">
-        <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand">
-                    <img src="img/logo.png" width="100px" alt="">
-                </a>
-                <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <div class="navbar-nav ml-auto py-0">
-                        <a href="#home" class="nav-item nav-link active">Home</a>
-                        <a href="#about" class="nav-item nav-link">About</a>
-                        <a href="#service" class="nav-item nav-link">Services</a>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                              News & articles
-                            </a>
-                            <div class="dropdown-menu rounded" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="#">News</a>
-                              <a class="dropdown-item" href="#">Articles</a>
-                            </div>
-                          </li>
-                        <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                    </div>
+  <!-- Navbar Start -->
+  <div class="container-fluid nav-bar p-0">
+    <div class="container-lg p-0">
+        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark ">
+            <a href="index.html" class="navbar-brand">
+                <img src="img/logo.png" width="100px" alt="">
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                <div class="navbar-nav ml-auto py-0">
+                    <a href="teams.html" class="nav-item nav-link active">Our Attorney</a>
+                    <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                    <a href="blog.html" class="nav-item nav-link">Articles</a>
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            News & articles
+                        </a>
+                        <div class="dropdown-menu rounded" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">Articles</a>
+                        </div>
+                    </li> -->
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </div>
+</div>
+<!-- Navbar End -->
     <!-- Navbar End -->
 
 
