--- a/contact.html
+++ b/contact.html
@@ -27,34 +27,38 @@
 
 <body>
     <!-- Navbar Start -->
+    <!-- Navbar Start -->
     <div class="container-fluid nav-bar p-0">
         <div class="container-lg p-0">
-            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark">
+            <nav class="navbar navbar-expand-lg bg-secondary navbar-dark ">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 text-white display-4"><span class="text-primary">D</span>ot<span class="text-primary">C</span>om</h1>
+                    <img src="img/logo.png" width="100px" alt="">
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="pricing.html" class="nav-item nav-link">Pricing</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
-                            <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
+                        <a href="teams.html" class="nav-item nav-link">Our Attorney</a>
+                        <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                        <a href="blog.html" class="nav-item nav-link">Articles</a>
+                        <!-- <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                News & articles
+                            </a>
+                            <div class="dropdown-menu rounded" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">News</a>
+                                <a class="dropdown-item" href="#">Articles</a>
                             </div>
-                        </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                        </li> -->
+                        <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                     </div>
                 </div>
             </nav>
         </div>
     </div>
+    <!-- Navbar End -->
     <!-- Navbar End -->
 
 
