--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="#home" class="nav-item nav-link active">Home</a>
-                            <a href="#about" class="nav-item nav-link">About</a>
-                            <a href="#service" class="nav-item nav-link">Services</a>
-                            <li class="nav-item dropdown">
+                            <a href="teams.html" class="nav-item nav-link">Our Attorney</a>
+                            <!-- <a href="#about" class="nav-item nav-link">About</a> -->
+                            <a href="blog.html" class="nav-item nav-link">Articles</a>
+                            <!-- <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                     News & articles
@@ -53,7 +53,7 @@
                                     <a class="dropdown-item" href="#">News</a>
                                     <a class="dropdown-item" href="#">Articles</a>
                                 </div>
-                            </li>
+                            </li> -->
                             <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                         </div>
                     </div>
@@ -69,8 +69,8 @@
                 <div id="header-carousel" class="carousel slide carousel-fade" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#header-carousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#header-carousel" data-slide-to="1"></li>
-                        <li data-target="#header-carousel" data-slide-to="2"></li>
+                        <!-- <li data-target="#header-carousel" data-slide-to="1"></li>
+                        <li data-target="#header-carousel" data-slide-to="2"></li> -->
                     </ol>
                     <div class="carousel-inner ">
                         <div class="carousel-item active">
@@ -83,13 +83,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item">
+                        <!-- <div class="carousel-item">
                             <img class="img-fluid w-100" style="height: 100vh;" src="img/bg2.jpg" alt="Image">
                             <div class="carousel-caption d-flex align-items-center justify-content-center">
                                 <div class="p-5" style="width: 100%; max-width: 900px;">
                                     <h5 class="text-white text-uppercase mb-md-3">R .PRAMA WIJAWA & PARTNERS</h5>
                                     <h1 class="display-3 text-white mb-md-4">Highly Professional Team Members</h1>
-                                    <!-- <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -99,10 +98,9 @@
                                 <div class="p-5" style="width: 100%; max-width: 900px;">
                                     <h5 class="text-white text-uppercase mb-md-3">R .PRAMA WIJAWA & PARTNERS</h5>
                                     <h1 class="display-3 text-white mb-md-4">Happy Clients & Positive Reviews</h1>
-                                    <!-- <a href="" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a> -->
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -355,7 +353,7 @@
         <section data-aos="fade-right" data-aos-duration="1000">
             <div class="container-fluid pt-5 pb-3">
                 <div class="container">
-                    <div class="row mb-4">
+                    <!-- <div class="row mb-4">
                         <div class="col-lg-12 mb-5" data-aos="fade-right" data-aos-duration="1500">
                             <h1 class="mt-2 mb-3">WHY CHOOSE US?</h1>
                             <h4 class="font-weight-normal text-muted mb-4">Not only provide legal services in business
@@ -416,30 +414,29 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <h4 class="mb-4">Our Happy Client's</h4>
+                    <!-- <h4 class="mb-4">Our Happy Client's</h4>
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item">
                             <div class="d-flex align-items-center mr-4">
                                 <img class="img-fluid w-100" data-toggle="tooltip" data-placement="top" title="Tooltip on top" src="img/testimonial-1.jpg" style="width: 80px; height: 80px;" alt="Image">
-                                <!-- <div class="pl-4"> -->
-                                    <!-- <h6 class="font-weight-bold">Client Name</h6> -->
-                                    <!-- <i class="text-muted">PT. Plaza Indonesia Realty, Tbk</i> -->
-                                <!-- </div> -->
+                                 <div class="pl-4">
+                                    <h6 class="font-weight-bold">Client Name</h6> -->
+                                    <!-- <i class="text-muted">PT. Plaza Indonesia Realty, Tbk</i>
+                                </div>
                             </div>
                         </div>
                         <div class="testimonial-item">
                             <div class="d-flex align-items-center mr-4">
                                 <img class="img-fluid w-100" src="img/testimonial-2.jpg" style="width: 80px; height: 80px;" alt="Image">
-                                <!-- <div class="pl-4">
+                                <div class="pl-4">
                                     <h6 class="font-weight-bold">Client Name</h6>
                                     <i class="text-muted">Profession</i>
-                                </div> -->
+                                </div>
                             </div>
                         </div>
-                        
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -449,7 +446,7 @@
             <div class="container-fluid pt-5">
                 <div class="container">
                     <div class="text-center">
-                        <h1 class="mt-2 mb-5">News & Articles</h1>
+                        <h1 class="mt-2 mb-5">Articles</h1>
                     </div>
                     <div class="row">
                         <div class="col-md-4 mb-5">
